navigation has been moved to a service (closing #9)

--- a/src/Hvz/GameBundle/Resources/config/services.yml
+++ b/src/Hvz/GameBundle/Resources/config/services.yml
@@ -13,3 +13,7 @@ services:
     hvz.tag_generator:
         class: Hvz\GameBundle\Services\TagGeneratorService
         arguments: ["@doctrine.orm.entity_manager"]
+
+    hvz.navigation:
+        class: Hvz\GameBundle\Services\NavigationService
+        arguments: ["@router", "@security.context"]
