--- a/src/Hvz/GameBundle/Resources/config/services.yml
+++ b/src/Hvz/GameBundle/Resources/config/services.yml
@@ -2,9 +2,6 @@ parameters:
 #    hvz_game.example.class: Hvz\GameBundle\Example
 
 services:
-    google_oauth.security.authentication.provider:
-        class:  Hvz\GameBundle\Security\Authentication\Provider\GoogleOAuthProvider
-        arguments: [""]
 
     google_oauth.security.authentication.listener:
         class:  Hvz\GameBundle\Security\Firewall\GoogleOAuthListener
@@ -17,3 +14,15 @@ services:
     hvz.navigation:
         class: Hvz\GameBundle\Services\NavigationService
         arguments: ["@router", "@security.context"]
+
+    hvz.oauth.settings:
+        class: Hvz\GameBundle\Services\OAuthSettings
+        arguments: [""]
+
+    hvz.oauth.google:
+        class: Hvz\GameBundle\Services\GoogleOAuthService
+        arguments: ["@hvz.oauth.settings"]
+
+    google_oauth.security.authentication.provider:
+        class:  Hvz\GameBundle\Security\Authentication\Provider\GoogleOAuthProvider
+        arguments: ["", "@hvz.oauth.google"]
