--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,7 @@
 security:
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_MOD: ROLE_USER
+        ROLE_ADMIN: ROLE_MOD
 
     providers:
         hvz_user_provider:
