added admin-only map of tags

--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "paper-dialog": "Polymer/paper-dialog",
     "paper-elements": "Polymer/paper-elements",
     "core-tooltip": "Polymer/core-tooltip",
-    "polymer": "Polymer/polymer"
+    "polymer": "Polymer/polymer",
+    "google-map": "GoogleWebComponents/google-map"
   }
 }
