--- a/src/Hvz/GameBundle/Resources/config/routing.yml
+++ b/src/Hvz/GameBundle/Resources/config/routing.yml
@@ -25,9 +25,9 @@ hvz_tags:
     pattern: /tags
     defaults: { _controller: HvzGameBundle:Game:tags }
 
-#hvz_graph:
-#    pattern: /graph
-#    defaults: { _controller: HvzGameBundle:Game:graph }
+hvz_map:
+    pattern: /map
+    defaults: { _controller: HvzGameBundle:Game:map }
 
 hvz_missions:
     pattern: /missions
