--- a/src/Hvz/GameBundle/Resources/config/routing.yml
+++ b/src/Hvz/GameBundle/Resources/config/routing.yml
@@ -1,4 +1,4 @@
-# Status Controller
+# Game\Status Controller
 hvz_index:
     pattern: /
     defaults: { _controller: HvzGameBundle:Game/Status:index }
@@ -7,12 +7,12 @@ hvz_error_game:
     pattern: /error/game
     defaults: { _controller: HvzGameBundle:Game/Status:gameError }
 
-# Rules Controller
+# Game\Rules Controller
 hvz_rules:
     pattern: /rules
     defaults: { _controller: HvzGameBundle:Game/Rules:index }
 
-# Register Tag Controller
+# Game\Register Tag Controller
 hvz_register_tag:
     pattern: /register_tag
     defaults: { _controller: HvzGameBundle:Game/RegisterTag:index }
@@ -23,7 +23,7 @@ hvz_register_tag_submit:
     defaults: { _controller: HvzGameBundle:Game/RegisterTag:index }
     methods: [POST]
 
-# Players Controller
+# Game\Players Controller
 hvz_players:
     pattern: /players
     defaults: { _controller: HvzGameBundle:Game/Players:index }
@@ -32,12 +32,12 @@ hvz_tags:
     pattern: /tags
     defaults: { _controller: HvzGameBundle:Game/Players:tags }
 
-# Map Controller
+# Game\Map Controller
 hvz_map:
     pattern: /map/{mode}
     defaults: { _controller: HvzGameBundle:Game/Map:index, mode: "all" }
 
-# Missions Controller
+# Game\Missions Controller
 hvz_missions:
     pattern: /missions
     defaults: { _controller: HvzGameBundle:Game/Missions:index }
@@ -57,169 +57,172 @@ hvz_profile_submit_clan:
     defaults: { _controller: HvzGameBundle:Profile:editClan }
     methods: [POST]
 
-# Admin Controller
+# Admin\Game Controller
 hvz_admin_games:
     pattern: /admin/games
-    defaults: { _controller: HvzGameBundle:Admin:games }
+    defaults: { _controller: HvzGameBundle:Admin\Game:index }
 
 hvz_admin_game_add_antivirus:
     pattern: /admin/game/{id}/av/add/{token}
-    defaults: { _controller: HvzGameBundle:Admin:gameAddAntiVirus }
+    defaults: { _controller: HvzGameBundle:Admin\Game:addAntiVirus }
     requirements:
         id: \d+
 
 hvz_admin_game_create:
     pattern: /admin/game/create
-    defaults: { _controller: HvzGameBundle:Admin:gameCreate }
+    defaults: { _controller: HvzGameBundle:Admin\Game:create }
 
 hvz_admin_game_edit:
     pattern: /admin/game/{id}/edit
-    defaults: { _controller: HvzGameBundle:Admin:gameEdit }
+    defaults: { _controller: HvzGameBundle:Admin\Game:edit }
     requirements:
         id: \d+
 
 hvz_admin_game_delete:
     pattern: /admin/game/{id}/delete/{token}
-    defaults: { _controller: HvzGameBundle:Admin:gameDelete }
+    defaults: { _controller: HvzGameBundle:Admin\Game:delete }
     requirements:
         id: \d+
 
+# Admin\User Controller
 hvz_admin_users:
     pattern: /admin/users
-    defaults: { _controller: HvzGameBundle:Admin:users }
+    defaults: { _controller: HvzGameBundle:Admin\User:index }
 
 hvz_admin_user_edit:
     pattern: /admin/user/{id}/edit
-    defaults: { _controller: HvzGameBundle:Admin:userEdit }
+    defaults: { _controller: HvzGameBundle:Admin\User:edit }
     requirements:
         id: \d+
 
 hvz_admin_user_delete:
     pattern: /admin/user/{id}/delete/{token}
-    defaults: { _controller: HvzGameBundle:Admin:userDelete }
+    defaults: { _controller: HvzGameBundle:Admin\User:delete }
     requirements:
         id: \d+
 
-hvz_admin_profile_generate:
-    pattern: /admin/profile/generate/{id}/{token}
-    defaults: { _controller: HvzGameBundle:Admin:profileGenerate }
-    requirements:
-        id: \d+
-
+# Admin\Profile Controller
 hvz_admin_profiles:
     pattern: /admin/profiles
-    defaults: { _controller: HvzGameBundle:Admin:profiles }
-
-hvz_admin_profiles_print:
-    pattern: /admin/profiles/game/{game}/print
-    defaults: { _controller: HvzGameBundle:Admin:profilesPrint }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:index }
 
 hvz_admin_profiles_by_game:
     pattern: /admin/profiles/game/{game}
-    defaults: { _controller: HvzGameBundle:Admin:profiles }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:index }
     requirements:
         game: \d+
 
 hvz_admin_profiles_by_user:
     pattern: /admin/profiles/user/{user}
-    defaults: { _controller: HvzGameBundle:Admin:profiles }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:index }
     requirements:
         user: \d+
 
+hvz_admin_profile_generate:
+    pattern: /admin/profile/generate/{id}/{token}
+    defaults: { _controller: HvzGameBundle:Admin\Profile:generate }
+    requirements:
+        id: \d+
+
+hvz_admin_profiles_print:
+    pattern: /admin/profiles/game/{game}/print
+    defaults: { _controller: HvzGameBundle:Admin\Profile:print }
+
 hvz_admin_profile_view:
     pattern: /admin/profile/{id}/view
-    defaults: { _controller: HvzGameBundle:Admin:profileView }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:view }
     requirements:
         id: \d+
 
 hvz_admin_profile_add_tag:
     pattern: /admin/profile/{id}/tag/add
-    defaults: { _controller: HvzGameBundle:Admin:profileAddTag }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:addTag }
     requirements:
         id: \d+
 
 hvz_admin_profile_give_badge:
     pattern: /admin/profile/{id}/badge/give
-    defaults: { _controller: HvzGameBundle:Admin:profileGiveBadge }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:giveBadge }
     requirements:
         id: \d+
 
 hvz_admin_profile_give_badge_submit:
     pattern: /admin/profile/{id}/badge/give/{badge}
-    defaults: { _controller: HvzGameBundle:Admin:profileGiveBadge }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:giveBadge }
     requirements:
         id: \d+
 
 hvz_admin_profile_edit:
     pattern: /admin/profile/{id}/edit
-    defaults: { _controller: HvzGameBundle:Admin:profileEdit }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:edit }
     requirements:
         id: \d+
 
 hvz_admin_profile_avatar_change:
     pattern: /admin/profile/{id}/avatar/change
-    defaults: { _controller: HvzGameBundle:Admin:profileChangeAvatar }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:changeAvatar }
     requirements:
         id: \d+
 
 hvz_admin_profile_avatar_submit:
     pattern: /admin/profile/{id}/avatar/submit
-    defaults: { _controller: HvzGameBundle:Admin:profileSubmitAvatar }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:submitAvatar }
     requirements:
         id: \d+
 
 hvz_admin_profile_delete:
     pattern: /admin/profile/{id}/delete/{token}
-    defaults: { _controller: HvzGameBundle:Admin:profileDelete }
+    defaults: { _controller: HvzGameBundle:Admin\Profile:delete }
     requirements:
         id: \d+
 
+# Admin\Mission Controller
 hvz_admin_missions:
     pattern: /admin/missions
-    defaults: { _controller: HvzGameBundle:Admin:missions }
+    defaults: { _controller: HvzGameBundle:Admin\Mission:index }
 
 hvz_admin_missions_by_game:
     pattern: /admin/missions/game/{game}
-    defaults: { _controller: HvzGameBundle:Admin:missions }
+    defaults: { _controller: HvzGameBundle:Admin\Mission:index }
     requirements:
         game: \d+
 
 hvz_admin_mission_edit:
     pattern: /admin/mission/{id}/edit
-    defaults: { _controller: HvzGameBundle:Admin:missionEdit }
+    defaults: { _controller: HvzGameBundle:Admin\Mission:edit }
     requirements:
         id: \d+
 
 hvz_admin_mission_create:
     pattern: /admin/mission/create
-    defaults: { _controller: HvzGameBundle:Admin:missionCreate }
+    defaults: { _controller: HvzGameBundle:Admin\Mission:create }
 
 hvz_admin_mission_delete:
     pattern: /admin/mission/{id}/delete/{token}
-    defaults: { _controller: HvzGameBundle:Admin:missionDelete }
+    defaults: { _controller: HvzGameBundle:Admin\Mission:delete }
     requirements:
         id: \d+
 
+# Admin\Rules Controller
 hvz_admin_rules:
     pattern: /admin/rules
-    defaults: { _controller: HvzGameBundle:Admin:rules }
+    defaults: { _controller: HvzGameBundle:Admin\Rules:index }
 
 hvz_admin_rule_edit:
     pattern: /admin/rule/{id}/edit
-    defaults: { _controller: HvzGameBundle:Admin:ruleEdit }
+    defaults: { _controller: HvzGameBundle:Admin\Rules:edit }
     requirements:
         id: \d+
 
 hvz_admin_rule_create:
     pattern: /admin/rule/create
-    defaults: { _controller: HvzGameBundle:Admin:ruleCreate }
+    defaults: { _controller: HvzGameBundle:Admin\Rules:create }
 
 hvz_admin_rule_delete:
     pattern: /admin/rule/{id}/delete/{token}
-    defaults: { _controller: HvzGameBundle:Admin:ruleDelete }
+    defaults: { _controller: HvzGameBundle:Admin\Rules:delete }
     requirements:
         id: \d+
-
 
 # Auth Controller
 hvz_auth_register:
