--- a/src/Hvz/GameBundle/Resources/config/routing.yml
+++ b/src/Hvz/GameBundle/Resources/config/routing.yml
@@ -86,8 +86,14 @@ hvz_admin_game_delete:
 
 # Admin\User Controller
 hvz_admin_users:
-    pattern: /admin/users
-    defaults: { _controller: HvzGameBundle:Admin\User:index }
+    pattern: /admin/users/{page}
+    defaults: { _controller: HvzGameBundle:Admin\User:index, page: 0 }
+    requirements:
+        id: \d+
+
+hvz_admin_users_search:
+    pattern: /admin/users/search
+    defaults: { _controller: HvzGameBundle:Admin\User:search }
 
 hvz_admin_user_edit:
     pattern: /admin/user/{id}/edit
