--- a/src/Hvz/GameBundle/Resources/config/routing.yml
+++ b/src/Hvz/GameBundle/Resources/config/routing.yml
@@ -39,8 +39,8 @@ hvz_players_search:
     defaults: { _controller: HvzGameBundle:Game/Players:search }
 
 hvz_tags:
-    pattern: /tags
-    defaults: { _controller: HvzGameBundle:Game/Players:tags }
+    pattern: /tags/{page}
+    defaults: { _controller: HvzGameBundle:Game/Players:tags, page: 0 }
 
 # Game\Map Controller
 hvz_map:
