--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,7 +25,7 @@ framework:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles:        [HvzGameBundle]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
