--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0",
-    "bootswatch": "~3.2.0+4"
+    "bootswatch": "~3.2.0+4",
+    "holderjs": "~2.4.0"
   }
 }
