converted more stuff

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "google/apiclient": "1.0.*@beta"
+        "google/apiclient": "1.0.*@beta",
+        "knplabs/knp-time-bundle": "~1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
