--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "jquery": "~2.1.1",
     "bootstrap": "~3.2.0",
     "bootswatch": "~3.2.0+4",
-    "holderjs": "~2.4.0"
+    "holderjs": "~2.4.0",
+    "snackbarjs": "FezVrasta/snackbarjs"
   }
 }
