Added badge registry service.
Only INTERNAL badges have been added to the badge registry for now.

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -11,3 +11,7 @@ services:
     id_generator:
         class: AppBundle\Service\IdGenerator
         arguments: ["@doctrine.orm.entity_manager"]
+
+    badge_registry:
+        class: AppBundle\Service\BadgeRegistry
+        arguments: ["@doctrine.orm.entity_manager"]
