added GoogleOAuthClient service

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -18,3 +18,7 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    google_client_id:         ChangeMe
+    google_client_secret:     ChangeMe
+    google_application_name:  Humans vs Zombies @ RIT
