--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -35,3 +35,7 @@ services:
     game_manager:
         class: AppBundle\Service\GameManager
         arguments: ["@action_log", "@doctrine.orm.entity_manager", "@badge_registry"]
+
+    game_authentication:
+        class: AppBundle\Service\GameAuthentication
+        arguments: ["@google_oauth.client", "@doctrine.orm.entity_manager", "@action_log", "@id_generator"]
