--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "holderjs": "~2.4.1",
     "snackbarjs": "~1.0.0",
     "webcamjs": "*",
-    "bootswatch": "~3.3.1+2",
+    "bootswatch": "~3.3.1",
     "jquery.countdown": "~2.0.4"
   }
 }
