--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -39,3 +39,7 @@ services:
     game_authentication:
         class: AppBundle\Service\GameAuthentication
         arguments: ["@google_oauth.client", "@doctrine.orm.entity_manager", "@action_log", "@id_generator", "@security.token_storage", "@event_dispatcher", "@session"]
+
+    profile_manager:
+        class: AppBundle\Service\ProfileManager
+        arguments: ["@doctrine.orm.entity_manager", "@badge_registry"]
