--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
         "google/apiclient": "~1.1",
-        "knplabs/knp-time-bundle": "~1.3"
+        "knplabs/knp-time-bundle": "~1.3",
+        "endroid/qrcode-bundle": "~1.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
