--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,6 @@
     "holderjs": "~2.4.1",
     "snackbarjs": "~1.0.0",
     "bootswatch": "~3.3.1",
-    "jquery.countdown": "~2.0.4",
-    "ckeditor": "~4.4.6"
+    "jquery.countdown": "~2.0.4"
   }
 }
