--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -34,7 +34,7 @@ services:
 
     game_manager:
         class: AppBundle\Service\GameManager
-        arguments: ["@action_log", "@doctrine.orm.entity_manager", "@badge_registry"]
+        arguments: ["@action_log", "@doctrine.orm.entity_manager", "@badge_registry", "@game_status"]
 
     game_authentication:
         class: AppBundle\Service\GameAuthentication
