--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -42,7 +42,7 @@ services:
 
     profile_manager:
         class: AppBundle\Service\ProfileManager
-        arguments: ["@doctrine.orm.entity_manager", "@badge_registry", "@id_generator"]
+        arguments: ["@doctrine.orm.entity_manager", "@badge_registry"]
 
     stats_manager:
         class: AppBundle\Service\StatsManager
