--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -31,6 +31,8 @@ twig:
     strict_variables: "%kernel.debug%"
     form:
         resources: ['bootstrap_3_layout.html.twig']
+    globals:
+        notification_hub_enabled: %notification_hub_enabled%
 
 # Assetic Configuration
 assetic:
