notifications require superadmin

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,6 +2,7 @@ security:
     role_hierarchy:
         ROLE_MOD: ROLE_USER
         ROLE_ADMIN: ROLE_MOD
+        ROLE_SUPERADMIN: ROLE_ADMIN
 
     providers:
         google_oauth.provider:
