show all missions to everyone after the game has ended

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,6 +33,7 @@ twig:
         resources: ['bootstrap_3_layout.html.twig']
     globals:
         notification_hub_enabled: %notification_hub_enabled%
+        game_status: "@game_status"
 
 # Assetic Configuration
 assetic:
